added all varibales to the template

--- a/template.tex
+++ b/template.tex
@@ -1,7 +1,8 @@
 \documentclass[12pt,a4paper]{article} % din a4, 11 pt schrift, einseitig,
 
 \begin{document}
-\VAR{Name}
-
-\VAR{Address}
+\VAR{Name}\\
+\VAR{Address}\\
+\VAR{Notes}\\
+\VAR{Contact}\\
 \end{document}
