--- a/.build/renderer_template.tex
+++ b/.build/renderer_template.tex
@@ -1,9 +1,10 @@
 \documentclass[12pt,a4paper]{article} % din a4, 11 pt schrift, einseitig,
 
 \begin{document}
-Test Project
-
+Test Project\\
 Nowhere
 Not-here-street 45
-655589, no-city
+655589, no-city\\
+Project good!\\
+test@test.de\\
 \end{document}
